fixtures/python/architecture/should_fail/adapter_choice.py
from src.infra.user_repo import SqlUserRepository


def build_service():
    return SqlUserRepository()
